# video-diet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  literconfig.json  pyproject.toml  requirements.txt  video_diet-0.1.12rc0-py3-none-any.whl
Avicii/Avicii – Essentials (2018) 320/: .fuse_hidden0000055300000005
tests/: test_video_converter.py
video_diet/: __init__.py  main.py  patch_ffprobe.py  utils.py
